# life-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cache_array.csv  no_cache.csv  scatterplot.py
include/: constants.hpp  creature.hpp  map.hpp  rando.hpp  renderer.hpp  tile.hpp  utils.hpp
src/: creature.cpp  main.cpp  map.cpp  rando.cpp  renderer.cpp  utils.cpp
